[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biodem"
version = "0.2.0"
description = "Dual-extraction method for phenotypic prediction and functional gene mining of complex traits."
authors = [
    {name = "Yanlin Ren", email = "ryl1999@126.com"},
    {name = "Chenhua Wu", email = "chanhuawu@outlook.com"},
]
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = {file = "LICENSE"}
keywords = ["bioinformatics", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: GPU",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11",
    "networkx>=3.1",
]

[project.urls]
Homepage = "https://github.com/cma2015/DEM"

[project.scripts]
dem-hello = "biodem.cli_dem:hello"
dem-impute = "biodem.cli_dem:cli_dem_impute"
dem-select-varpca = "biodem.cli_dem:cli_dem_select_varpca"
dem-select-rf = "biodem.cli_dem:cli_dem_select_rf"
dem-model = "biodem.cli_dem:cli_dem_model"
dem-predict = "biodem.cli_dem:cli_dem_predict"
dem-rank = "biodem.cli_dem:cli_dem_rank"
