[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biodem"
version = "0.6.0"
description = "Dual-extraction method for phenotypic prediction and functional gene mining of complex traits."
authors = [
    {name = "Chenhua Wu", email = "chanhuawu@outlook.com"},
    {name = "Yanlin Ren", email = "ryl1999@126.com"},
]
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = {file = "LICENSE"}
keywords = ["bioinformatics", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: GPU",
]
dependencies = [
    "torch>=2.2",
    "lightning>=2.2.2",
    "torchmetrics>=1.3.1",
    "tensorboard>=2.15",
    "tensorboardx>=2.6.0",
    "numpy>=1.25",
    "pandas>=2.2.1",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "optuna>=3.6.0",
    "pysam>=0.22.0",
    "json5>=0.9.24",
    "h5py>=3.9.0",
    "xarray>=2024.1.0",
]

[project.urls]
Homepage = "https://github.com/cma2015/DEM"

[project.scripts]
dem-hello = "biodem.cli_dem:hello"
filter-pheno = "biodem.cli_dem:cli_filter_pheno"
ncv-prep-r = "biodem.cli_dem:cli_ncv_prep_regre"
ncv-prep-c = "biodem.cli_dem:cli_ncv_prep_class"
dem-impute = "biodem.cli_dem:cli_dem_impute"
dem-select-varpca = "biodem.cli_dem:cli_dem_select_varpca"
dem-select-rf = "biodem.cli_dem:cli_dem_select_rf"
rm-ckpt = "biodem.cli_dem:cli_rm_ckpt"
dem-s2g-pipe = "biodem.cli_dem:cli_s2g_pipe"
dem-train-pipe = "biodem.cli_dem:cli_dem_train_pipe"
dem-predict = "biodem.cli_dem:cli_dem_predict"
dem-rank = "biodem.cli_dem:cli_dem_rank"
