[package]
name = "pregv"
authors = ["Chenhua Wu <chanhuawu@outlook.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bincode = "1.3.3"
clap = "4.5.11"
flate2 = "1.0.30"
futures = "0.3.30"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
noodles = { version = "0.78.0", features = ["vcf", "gff", "async"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde-pickle = "1.1.1"
